# GuitarComposer

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.md  build-custom-dependencies.sh  env.sh  pyproject.toml  requirements.txt
data/: midi_drum_groups.json
data/audio-samples/: readme
data/effect_config/: config.json
data/guitar/: stringMaps.json
data/instruments/: customInstruments.json  groupings.json
data/music_theory/: scales.xml
data/presets/: ambient_echo  dreamy_rythm  scratchy_fuzz  serious_reverb
data/sf_info/: instruments.json  readme
doc/: Doxyfile  filter_graph_design.txt  generate_c_diagrams.py  sequence_tracer.py
fs/: fluidsynth.py  gsynth.py  midi.py
new/GuitarComposer2/: pyproject.toml
scripts/: generate_instrument_info.py  print_instrument_info.sh
src/: app.py  main.py
src/common/: config.py  dispatch.py
src/controllers/: appcontroller.py  editorcontroller.py  liveaudiocontroller.py  playercontroller.py
src/models/: chord.py  effect.py  filterGraph.py  measure.py  midi.py  note.py  param.py  song.py  track.py  trackmodel.py  tuning.py
src/music/: constants.py  durationtypes.py  dynamic.py  instrument.py
src/services/: __init__.py  effectRepo.py  liveaudio.py  modelManager.py  player.py  projectMngr.py  redoUndo.py  unittest_liveaudio.py  usbmonitor.py
test/: test_filters.py  test_instruments.py  test_track_editing.py  test_track_model.py
tools/: determine-track-event-from-duration.py  list-icons.py  make_drum_midi_json.py
tuxguitar-hack/: MusicXMLWriter.java  readme
typings/: gcsynth.pyi
(+251 files in other folders)
