[tool.poetry]
name = "guitarcomposer"
version = "0.1.0"
description = ""
authors = ["David Schere <dave.avantgarde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"
pyqt6 = "^6.6.1"
singleton-decorator = "^1.0.0"
subpub = "^1.0.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
